adt2unit.h

#define MIN_IRQ_FREQ 50
#define MAX_IRQ_FREQ 1000
// TODO: rename `decay_bar' into `spectrum_bar'
#define DECAY_BARS 25 // to map playing note into the range 1..DECAY_BARS
extern uint16_t IRQ_freq;
extern int16_t  IRQ_freq_shift;
extern uint8_t  tempo;
extern uint8_t  speed;
extern uint16_t macro_speedup;
extern bool     timer_initialized;
extern bool     fast_forward;
extern bool     pattern_break;
extern bool     pattern_break_loop;
extern bool     pattern_break_docmd;
extern uint8_t  pattern_break_oldord;
extern bool     pattern_delay;
extern uint8_t  next_line;
extern bool     replay_forbidden;
extern uint8_t  max_patterns;
extern bool     force_macro_keyon;
extern const uint8_t def_vibtrem_speed_factor;
extern const uint8_t def_vibtrem_table_size;
extern const uint8_t def_vibtrem_table[256]; // HINT: (FPC) start index 0
extern uint8_t vibtrem_speed_factor;
extern uint8_t vibtrem_table_size;
extern uint8_t vibtrem_table[256]; // HINT: (FPC) start index 0
typedef struct {
  uint8_t pos;
  uint8_t dir;
  uint8_t speed;
  uint8_t depth;
  bool fine;
} tVIBRATO_TREMOLO_TABLE[20]; // HINT: (FPC) start index 1
extern tVIBRATO_TREMOLO_TABLE vibr_table;
extern tVIBRATO_TREMOLO_TABLE vibr_table2;
extern tVIBRATO_TREMOLO_TABLE trem_table;
extern tVIBRATO_TREMOLO_TABLE trem_table2;
#define keyoff_flag        0x80
#define fixed_note_flag    0x90
#define pattern_loop_flag  0xE0
#define pattern_break_flag 0xF0
extern tFM_PARAMETER_TABLE
                  fmpar_table  [20]; // HINT: (FPC) start index 1
extern bool       volume_lock  [20]; // HINT: (FPC) start index 1
extern bool       vol4op_lock  [20]; // HINT: (FPC) start index 1
extern uint16_t   volume_table [20]; // HINT: (FPC) start index 1
extern uint16_t   vscale_table [20]; // HINT: (FPC) start index 1
extern bool       peak_lock    [20]; // HINT: (FPC) start index 1
extern bool       pan_lock     [20]; // HINT: (FPC) start index 1
extern uint8_t    modulator_vol[20]; // HINT: (FPC) start index 1
extern uint8_t    carrier_vol  [20]; // HINT: (FPC) start index 1
extern tDECAY_BAR decay_bar    [DECAY_BARS]; // HINT: (FPC) start index 1
extern tDECAY_BAR decay_bar    [20]; // HINT: (FPC) start index 1
extern tCHUNK     event_table  [20]; // HINT: (FPC) start index 1
extern uint8_t    voice_table  [20]; // HINT: (FPC) start index 1
extern uint16_t   freq_table   [20]; // HINT: (FPC) start index 1
extern uint16_t   zero_fq_table[20]; // HINT: (FPC) start index 1
extern uint16_t   effect_table [20]; // HINT: (FPC) start index 1
extern uint16_t   effect_table2[20]; // HINT: (FPC) start index 1
extern uint8_t    fslide_table [20]; // HINT: (FPC) start index 1
extern uint8_t    fslide_table2[20]; // HINT: (FPC) start index 1
extern uint16_t   glfsld_table [20]; // HINT: (FPC) start index 1
extern uint16_t   glfsld_table2[20]; // HINT: (FPC) start index 1
extern struct porta_table_t { uint16_t freq; uint8_t speed; }
                  porta_table  [20], // HINT: (FPC) start index 1
                  porta_table2 [20]; // HINT: (FPC) start index 1
extern bool       portaFK_table[20]; // HINT: (FPC) start index 1
extern struct arpgg_table_t { uint8_t state, note, add1, add2; }
                  arpgg_table  [20], // HINT: (FPC) start index 1
                  arpgg_table2 [20]; // HINT: (FPC) start index 1
extern uint8_t    retrig_table [20]; // HINT: (FPC) start index 1
extern uint8_t    retrig_table2[20]; // HINT: (FPC) start index 1
extern struct tremor_table_t { int16_t pos; uint16_t volume; }
                  tremor_table [20], // HINT: (FPC) start index 1
                  tremor_table2[20]; // HINT: (FPC) start index 1
extern uint8_t    panning_table[20]; // HINT: (FPC) start index 1
extern uint16_t   last_effect  [20]; // HINT: (FPC) start index 1
extern uint16_t   last_effect2 [20]; // HINT: (FPC) start index 1
extern uint8_t    volslide_type[20]; // HINT: (FPC) start index 1
extern bool       event_new    [20]; // HINT: (FPC) start index 1
extern uint8_t    notedel_table[20]; // HINT: (FPC) start index 1
extern uint8_t    notecut_table[20]; // HINT: (FPC) start index 1
extern int8_t     ftune_table  [20]; // HINT: (FPC) start index 1
extern bool       keyoff_loop  [20]; // HINT: (FPC) start index 1
extern struct macro_table_t {
  uint16_t fmreg_pos, arpg_pos, vib_pos;
  uint8_t  fmreg_count, fmreg_duration, arpg_count;
  uint8_t  vib_count, vib_delay;
  bool     vib_paused;
  uint8_t  fmreg_table, arpg_table, vib_table;
  uint8_t  arpg_note;
  uint16_t vib_freq;
}                 macro_table  [20]; // HINT: (FPC) start index 1
extern uint8_t    loopbck_table[20]; // HINT: (FPC) start index 1
extern uint8_t    loop_table   [20][256]; // HINT: (FPC) start index 1,0
extern uint8_t misc_register;
extern uint8_t  overall_volume;
extern uint8_t  global_volume;
extern uint8_t  fade_out_volume;
extern int32_t  playback_speed_shift;
extern tPLAY_STATUS play_status;
#define MACRO_NOTE_RETRIG_FLAG 0x80
#define MACRO_ENVELOPE_RESTART_FLAG 0x40
#define MACRO_ZERO_FREQ_FLAG 0x20
extern uint8_t current_order;
extern uint8_t current_pattern;
extern uint8_t current_line;
extern uint8_t current_tremolo_depth;
extern uint8_t current_vibrato_depth;
extern bool    limit_exceeded;
extern bool    reset_chan      [20]; // HINT: (FPC) start index 1
extern bool    speed_update, lockvol, panlock, lockVP;
extern uint8_t tremolo_depth, vibrato_depth; // 0..1
extern bool    volume_scaling, percussion_mode;
extern uint8_t last_order;
extern tPATTERNS_DATA *pattdata;
extern tOLD_VARIABLE_DATA1 old_hash_buffer;
extern tOLD_VARIABLE_DATA2 hash_buffer;
extern tOLD_FIXED_SONGDATA old_songdata;
extern tFIXED_SONGDATA songdata;
/*
extern void *ptr_songdata;
extern void *ptr_songdata_bak;
extern void *ptr_temp_songdata;
extern void *ptr_clipboard;
*/
extern int32_t song_timer, timer_temp;
extern int32_t song_timer_tenths;
extern int32_t ticks, tick0, tickD, tickXF;
extern double  time_playing;
void start_playing (void);
void stop_playing (void);
void set_overall_volume (uint8_t level);
void init_timer_proc (void);
void done_timer_proc (void);
void get_chunk (uint8_t pattern, uint8_t line, uint8_t channel, tCHUNK *chunk);
void put_chunk (uint8_t pattern, uint8_t line, uint8_t channel, const tCHUNK *chunk);
int16_t calc_following_order (uint8_t order);
bool    is_4op_chan (uint8_t chan);
void count_order (uint8_t *entries);
void init_old_songdata (void);
void init_songdata (tFIXED_SONGDATA *song);
int32_t min (int32_t value, int32_t minimum);
int32_t max (int32_t value, int32_t maximum);
extern int32_t ticklooper;
extern int32_t macro_ticklooper;
extern int32_t timer_ticklooper;
extern int32_t timer_200hz_counter;
extern int32_t timer_50hz_counter;
extern int32_t timer_20hz_counter;
extern bool    timer_200hz_flag;
extern bool    timer_50hz_flag;
extern bool    timer_20hz_flag;