adt2play/a2player.h

extern void (*timer_poll_proc_ptr) (void);
extern int16_t  error_code;
extern uint16_t song_timer;
extern int32_t  ticks, tick0, tickD;
extern bool     timer_fix;
// adt2opl3 {
extern uint16_t opl3port;
typedef void tOPLOUT_proc (uint16_t reg, uint16_t data);
void opl2out (uint16_t reg, uint16_t data);
void opl3exp (uint16_t data);
extern tOPLOUT_proc *opl3out;